# cub3d

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  main_bonus.c  map_test.cub  proof.txt  run_valgrind.sh
Asccii/: completed.sh  creating.sh  object.sh
assets/map_files/invalid/: map_too_long.cub
assets/map_files/valid/: cheese_maze 1.cub  cheese_maze.cub  creepy_bonus.cub  dungeon.cub  (+8 more)
assets/sprites/: door_side.xpm
header/: cub3d.h
includes/: cub3d.h
includes_bonus/: cub3d_bonus.h
libs/: Makefile  libft.h
libs/ft_get_next_line/: ft_get_next_line.c
map_files/invalid/: duplicated_setting.cub
map_files/valid/: library.cub
maps/: creepy.cub  dungeon.cub  test_map.cub
sprites/: door_mid.xcf  door_mid.xpm  handmap.xcf  handmap.xpm  logo.xcf  west_wall.xpm
sprites/future/: south_wall.xpm
sprites/mood/: door_side.xpm
sprites_bonus/default/: logo.xpm
src/: debug.c  debug_fuctions.c  door_animation.c  door_texture_handler.c  draw_wall.c  endgame.c  fill_map.c  fog_creator.c  free.c  init.c  key_handler.c  main.c  map_check.c  minimap.c  mouse_handler.c  place_player.c  shoot_rays.c  texture_color_sup.c
src/debug/: debug_fuctions.c  debug_utils.c
src/init_game/: create_texture.c  door_animation.c  door_texture_handler.c  draw_wall.c  file.c  fog_creator.c  init_game.c  intro_screen.c  key_handler.c  map.c  minimap.c  mouse_handler.c  move_orientation.c  move_player.c  player.c  shoot_rays.c  structs.c  texture_color.c  textures.c
src/init_struct/: create_texture.c  file.c  map.c  map_utils.c  player.c  structs.c  texture_color.c  texture_color_sup.c  textures.c  textures_utils.c  utils.c
src/map_handler/: fill_map.c
src/player/: place_player.c
src/raycasting/: draw_wall.c  shoot_rays.c
src/texture_handler/: create_texture.c  texture_color.c
src_bonus/: endgame_bonus.c  free_bonus.c
src_bonus/init_game/: door_animation_bonus.c  door_texture_handler_bonus.c  draw_wall_bonus.c  fog_creator_bonus.c  init_game_bonus.c  intro_screen_bonus.c  key_handler_bonus.c  minimap_bonus.c  mouse_handler_bonus.c  move_orientation_bonus.c  move_player_bonus.c  shoot_rays_bonus.c
src_bonus/init_struct/: create_texture_bonus.c  file_bonus.c  map_bonus.c  map_utils_bonus.c  player_bonus.c  structs_bonus.c  texture_color_bonus.c  texture_color_sup_bonus.c  textures_bonus.c  textures_utils_bonus.c  utils_bonus.c
(+4 files in other folders)
